CAY-1503 POST_LOAD is not called on prefetched objects
CAY-1505 Callbacks: POST_UPDATE is called on updated removed object, instead of POST_REMOVE
CAY-1506 Reserverd words mapping in WHERE clause
CAY-1518 cgen: duplicate callback methods
CAY-1557 Vertical inheritance is broken for subclasses with more than one flattened attribute

----------------------------------
Release: 3.0.1
Date: 
----------------------------------

Bug Fixes Since 3.0-final:

CAY-1354 Wrong Types mapping for selected values in Row Queries
CAY-1380 Support for Escaped LIKE Clauses in Expressions
CAY-1402 Ability to use Terminating "@size" in Nested Properties Against Collections
CAY-1416 ExpressionFactory.noMatchExp.toEJBQL() produces incorrect output
CAY-1417 EJBQL doesn't support null numeric parameters
CAY-1426 EJBQL: ESCAPE fails after positional parameter
CAY-1452 EJBQL query scalar result is not supported on ROP client
CAY-1455 "NULL" JDBC type is shown for DbAttribute data types in the Modeler
CAY-1458 Document Vertical Inheritance
CAY-1467 Shut down EventManager in WebApplicationContextFilter.destroy()
CAY-1468 Commit performance degradation
CAY-1471 Create a source cayenne assembly
CAY-1473 Ensure DataRow version increment is atomic

----------------------------------
Release: 3.0 (final) 
Date: 
----------------------------------

(no changes since 3.0RC3)

----------------------------------
Release: 3.0 RC 3
Date: 5 April 2010
----------------------------------

Bug Fixes Since 3.0RC2:

CAY-1111 Expression.toEJBQL() support for single-column PK Persistent objects
CAY-1378 Error unsetting to-many DataObject property
	(this also reverts CAY-1009)
CAY-1379 Error resolving fault, no matching row exists in the database
CAY-1382 org.apache.cayenne.reflect.EnumConverter not handling null values for ExtendedEnumerations
CAY-1383 unneeded target in modeler attributes inspection 
CAY-1385 Modeler: error dialog doesn't show the correct version